# generated 2001/9/18 9:40:08 CEST by thoma@Tiger.
# using glademm V0.6.2_cvs

AC_PREREQ(2.50)
AC_INIT(artikeleingabe, 0.0, [christof@petig-baender.de])
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL

AC_LANG_CPLUSPLUS

PETIG_CHECK_KOMPONENTEN2

AC_OUTPUT(Makefile src/Makefile AufArtKonsistenz/Makefile)
