# generated 2001/9/18 9:40:08 CEST by thoma@Tiger.
# using glademm V0.6.2_cvs

AC_PREREQ(2.50)
AC_INIT(artikeleingabe, 0.0, [christof@petig-baender.de])
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL

AC_LANG_CPLUSPLUS

# hack for my new computer - don't know why this is not in gtkmm-2.4 ...
GTKMM_DEP_LIBS=`pkg-config --libs glibmm-2.4 gdkmm-2.4 gtk+-2.0 gdk-2.0 gdk-pixbuf-2.0 \
	atkmm-1.6 atk pangomm-1.4 pango gobject-2.0 glib-2.0`
AC_SUBST(GTKMM_DEP_LIBS)

PETIG_CHECK_KOMPONENTEN2

AC_OUTPUT(Makefile src/Makefile AufArtKonsistenz/Makefile)
