# $Id: configure.in,v 1.13 2005/11/03 21:05:34 christof Exp $

AC_PREREQ(2.50)
AC_INIT(Komponenten, 0.4.0, [manuproc-developer-de@berlios.de])
AM_INIT_AUTOMAKE

AC_CONFIG_HEADERS(config.h)

AC_PREFIX_DEFAULT(/usr/local)

AC_PROG_CXX
AM_PROG_LIBTOOL
AC_LANG_CPLUSPLUS

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(CXXFLAGS)

PETIG_CHECK_COMMONXX
# we use the new API of CellRendererSimpleTree
PKG_CHECK_MODULES(dummy,[gtkmm-2.4 >= 2.4.0])
PETIG_CHECK_COMMONGTK2

KOMPONENTEN2_INCLUDES="$COMMONXX_INCLUDES $COMMONGTK2_INCLUDES -I\$(top_srcdir)/src"
KOMPONENTEN2_LDFLAGS="$COMMONXX_LDFLAGS $COMMONGTK2_LDFLAGS"
KOMPONENTEN2_LIBS="\$(top_srcdir)/src/libKomponenten.a $COMMONXX_LIBS $COMMONGTK2_LIBS"
AC_SUBST(KOMPONENTEN2_INCLUDES)
AC_SUBST(KOMPONENTEN2_LDFLAGS)
AC_SUBST(KOMPONENTEN2_LIBS)

AC_OUTPUT(Makefile src/Makefile examples/Makefile \
	examples/artikelbox/Makefile examples/eingabe/Makefile 
	examples/tree_simplest/Makefile examples/MVC/Makefile
	examples/newtree/Makefile)
