# $Id: configure.in,v 1.16 2005/11/15 13:18:38 christof Exp $

AC_PREREQ(2.50)
AC_INIT(Komponenten, 0.4.0, [manuproc-developer-de@berlios.de])
AM_INIT_AUTOMAKE

AC_CONFIG_HEADERS(config.h)

AC_PREFIX_DEFAULT(/usr/local)

AC_PROG_CXX
AM_PROG_LIBTOOL
AC_LANG_CPLUSPLUS

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(CXXFLAGS)

PETIG_CHECK_COMMONXX
# we use the new API of CellRendererSimpleTree
PKG_CHECK_MODULES(dummy,[gtkmm-2.4 >= 2.4.0])
PETIG_CHECK_COMMONGTK2

GETTEXT_PACKAGE=ManuProC_Widgets
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",
		[the gettext domain])

AM_GNU_GETTEXT([external])

if test -z "${DATADIRNAME}"
then DATADIRNAME=share
fi
dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale",
		[the location of locale files])
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale",
		[the location of locale files])
fi

KOMPONENTEN2_INCLUDES="$COMMONXX_INCLUDES $COMMONGTK2_INCLUDES -I\$(top_srcdir)/src"
KOMPONENTEN2_LDFLAGS="$COMMONXX_LDFLAGS $COMMONGTK2_LDFLAGS"
KOMPONENTEN2_LIBS="\$(top_srcdir)/src/libKomponenten.a $COMMONXX_LIBS $COMMONGTK2_LIBS"
AC_SUBST(KOMPONENTEN2_INCLUDES)
AC_SUBST(KOMPONENTEN2_LDFLAGS)
AC_SUBST(KOMPONENTEN2_LIBS)

AC_OUTPUT(Makefile src/Makefile examples/Makefile  po/Makefile.in\
	examples/artikelbox/Makefile examples/eingabe/Makefile 
	examples/tree_simplest/Makefile examples/MVC/Makefile
	examples/newtree/Makefile)
