# generated 2004/3/12 22:15:24 CET by jacek@jaceksdell.(none)
# using glademm V2.0.0b

AC_INIT(src/mpc_agent.cc)
AM_INIT_AUTOMAKE(mpc_agent, 0.0)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL

dnl *************************************************
dnl gettext support
dnl *************************************************

AC_LANG_CPLUSPLUS


PKG_CHECK_MODULES(GTKMM,[gtkmm-2.0 >= 2.2.8])
AC_SUBST(GTKMM_CFLAGS)
AC_SUBST(GTKMM_LIBS)
PETIG_CHECK_KOMPONENTEN2

if echo __MINGW32__ | $CPP - - | fgrep -q __MINGW32__
then mingw=false
else mingw=true 
fi
AM_CONDITIONAL(WINDOWS, test x$mingw = xtrue)



AC_OUTPUT(Makefile src/Makefile  po/Makefile.in m4/Makefile )


