# generated 2001/3/28 15:05:05 CEST by jacek@mimi.
# using glademm V0.5_11f_cvs

AC_PREREQ(2.50)
AC_INIT(kundendaten, 0.0, [manuproc-developer-de@berlios.de])
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL

AC_LANG_CPLUSPLUS

PETIG_CHECK_KOMPONENTEN2

AC_OUTPUT(Makefile src/Makefile)
