# generated 2001/2/19 21:34:27 CET by jacek@mimi.
# using glademm V0.5_11f_cvs

AC_PREREQ(2.50)
AC_INIT(auftrag, 0.0, [manuproc-developer-de@berlios.de])
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL

AC_LANG_CPLUSPLUS

PETIG_CHECK_KOMPONENTEN2

# we don't want to link auftrag_drucken with gtkmm !
COMMONGTK2_ONLY=`for i in $COMMONGTK2_LIBS ; do \
	if expr match "$i" ".*commongtk.*" >/dev/null; then echo -n "$i " ; fi ; \
	if expr match "$i" ".*GtkmmAddons.*" >/dev/null; then echo -n "$i " ; fi ; \
	done`
AC_SUBST(COMMONGTK2_ONLY)

AC_OUTPUT(Makefile src/Makefile drucken/Makefile )
# sdo_drucken/Makefile  soll das wirklich hier rein?
