# $Id: configure.in,v 1.8 2002/07/08 08:25:20 christof Exp $

AC_INIT(src/treebase.h)

AM_INIT_AUTOMAKE(ManuProC_Widgets, 0.7.2)
AM_CONFIG_HEADER(config.h)

AC_PREFIX_DEFAULT(/usr/local)

AC_PROG_CXX
AM_PROG_LIBTOOL
AC_LANG_CPLUSPLUS

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(CXXFLAGS)

PETIG_CHECK_COMMONXX
PETIG_CHECK_COMMONGTK

AC_OUTPUT(Makefile src/Makefile examples/Makefile \
   examples/dwhouse/Makefile examples/tree_simplest/Makefile)
