# $Id: configure.in,v 1.10 2002/07/26 07:43:28 christof Exp $

AC_INIT(src/treebase.h)

AM_INIT_AUTOMAKE(ManuProC_Widgets, 0.7.2)
AM_CONFIG_HEADER(config.h)

AC_PREFIX_DEFAULT(/usr/local)

AC_PROG_CXX
AM_PROG_LIBTOOL
AC_LANG_CPLUSPLUS

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(CXXFLAGS)

PETIG_CHECK_COMMONXX
PETIG_CHECK_COMMONGTK

KOMPONENTEN_INCLUDES="$COMMONXX_INCLUDES $COMMONGTK_INCLUDES -I\$(top_srcdir)/src"
KOMPONENTEN_LDFLAGS="$COMMONXX_LDFLAGS $COMMONGTK_LDFLAGS"
KOMPONENTEN_LIBS="\$(top_srcdir)/src/libKomponenten.a $COMMONXX_LIBS $COMMONGTK_LIBS"
AC_SUBST(KOMPONENTEN_INCLUDES)
AC_SUBST(KOMPONENTEN_LDFLAGS)
AC_SUBST(KOMPONENTEN_LIBS)

AC_OUTPUT(Makefile src/Makefile examples/Makefile \
   examples/dwhouse/Makefile examples/tree_simplest/Makefile \
   examples/MVC/Makefile )
