# $Id: configure.in,v 1.12 2002/09/27 09:48:44 christof Exp $

AC_INIT(src/treebase.h)

AM_INIT_AUTOMAKE(ManuProC_Widgets, 0.7.2)
AM_CONFIG_HEADER(config.h)

AC_PREFIX_DEFAULT(/usr/local)

AC_PROG_CXX
AM_PROG_LIBTOOL
AC_LANG_CPLUSPLUS

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(CXXFLAGS)

PETIG_CHECK_COMMONXX
PETIG_CHECK_COMMONGTK2

KOMPONENTEN_INCLUDES="$COMMONXX_INCLUDES $COMMONGTK2_INCLUDES -I\$(top_srcdir)/src"
KOMPONENTEN_LDFLAGS="$COMMONXX_LDFLAGS $COMMONGTK2_LDFLAGS"
KOMPONENTEN_LIBS="\$(top_srcdir)/src/libManuProC_Widgets.a $COMMONXX_LIBS $COMMONGTK2_LIBS"
AC_SUBST(KOMPONENTEN_INCLUDES)
AC_SUBST(KOMPONENTEN_LDFLAGS)
AC_SUBST(KOMPONENTEN_LIBS)

AC_OUTPUT(Makefile src/Makefile examples/Makefile \
   examples/dwhouse/Makefile examples/tree_simplest/Makefile \
   examples/MVC/Makefile )
